--- a/.github/workflows/pr_cleanup.yml
+++ b/.github/workflows/pr_cleanup.yml
@@ -1,4 +1,4 @@
-name: Cleanup PR Artifacts
+name: PR Declined Cleanup
 
 on:
   pull_request:
@@ -7,17 +7,20 @@ on:
       - main
       - develop
 
+permissions:
+  contents: write
+
 jobs:
   cleanup:
     if: github.event.pull_request.merged == false
     runs-on: ubuntu-latest
     steps:
-      # Use a GitHub Action or script to delete artifacts for this PR
-      - name: Delete artifacts
+      - name: Remove PR-specific build folder
+        run: |
+          PR_NUM=${{ github.event.pull_request.number }}
+          rm -rf Builds/Android/PR-${PR_NUM}
+
+      - name: Delete PR Build Artifact
         uses: c-hive/delete-artifact@v2
         with:
-          name: Unity-Build
-      - name: Delete bumped files artifact
-        uses: c-hive/delete-artifact@v2
-        with:
-          name: bumped-files
+          name: Unity-Build-PR-${{ github.event.pull_request.number }}
