--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,4 +91,11 @@ jobs:
           if [ -f ProjectSettings/ProjectSettings.asset ]; then
             mv ProjectSettings/ProjectSettings.asset Builds/Android/PR-${PR_NUM}/ProjectSettings.asset
           fi
-
+          
+      # Upload build and project settings only
+      - name: Upload PR Build Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Unity-Build-PR-${{ github.event.pull_request.number }}
+          path: Builds/Android/PR-${{ github.event.pull_request.number }}/
+          retention-days: 30
