--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,17 +82,22 @@ jobs:
           buildsPath: Builds/Android
           allowDirtyBuild: true
 
-      # Move APK(s) and ProjectSettings.asset to PR folder
-      - name: Move build and project settings to PR folder
+      - name: Commit ProjectSettings.asset to PR branch
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add ProjectSettings/ProjectSettings.asset
+          git commit -m "Update ProjectSettings.asset from CI build" || echo "No changes to commit"
+          git push
+
+      # Move APK(s) to PR folder
+      - name: Move APK(s) to PR folder
         run: |
           PR_NUM=${{ github.event.pull_request.number }}
           mkdir -p Builds/Android/PR-${PR_NUM}
           find Builds/Android -maxdepth 1 -type f -name "*.apk" -exec mv {} Builds/Android/PR-${PR_NUM}/ \;
-          if [ -f ProjectSettings/ProjectSettings.asset ]; then
-            mv ProjectSettings/ProjectSettings.asset Builds/Android/PR-${PR_NUM}/ProjectSettings.asset
-          fi
           
-      # Upload build and project settings only
+      # Upload build APK(s) only
       - name: Upload PR Build Artifact
         uses: actions/upload-artifact@v4
         with:
