--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,7 +88,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add ProjectSettings/ProjectSettings.asset
           git commit -m "Update ProjectSettings.asset from CI build" || echo "No changes to commit"
-          git push
+          git push origin HEAD:${{ github.head_ref }}
 
       # Move APK(s) to PR folder
       - name: Move APK(s) to PR folder
