--- a/.github/workflows/PR_Merged_Upload_Cleanup.yml
+++ b/.github/workflows/PR_Merged_Upload_Cleanup.yml
@@ -1,16 +1,16 @@
 name: PR Merged Upload & Cleanup
 
 on:
-  pull_request:
-    types: [closed]
-    branches:
-      - main
-      - develop
+  workflow_run:
+    workflows: ["Unity VR Android Build"]
+    types: [completed]
 
 jobs:
   upload-meta:
-    name: Upload to Meta Quest
-    if: github.event.pull_request.merged == true
+    if: >
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.event == 'pull_request' &&
+      (github.event.workflow_run.head_branch == 'main' || github.event.workflow_run.head_branch == 'develop')
     runs-on: ubuntu-latest
 
     steps:
